--- a/wargame.ui
+++ b/wargame.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
+    <width>714</width>
     <height>400</height>
    </rect>
   </property>
@@ -18,16 +18,12 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>110</y>
-      <width>171</width>
-      <height>91</height>
+      <y>80</y>
+      <width>371</width>
+      <height>191</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout_3"/>
-     </item>
-    </layout>
+    <layout class="QVBoxLayout" name="verticalLayout"/>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -35,7 +31,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
+     <width>714</width>
      <height>23</height>
     </rect>
    </property>
